--- a/config/Cargo.toml
+++ b/config/Cargo.toml
@@ -14,6 +14,7 @@ semver = { version = "1.0.4", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.73"
 toml = "0.5"
+figment = { version = "0.10", features = ["toml", "env"] }
+eyre = "0.6.5"
 ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
 ethers-solc = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
-figment = { version = "0.10", features = ["toml", "env"] }
