--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -14,7 +14,7 @@ cast = { path = "../cast" }
 evm-adapters = { path = "../evm-adapters" }
 dunce = "1.0.2"
 # ethers = "0.5"
-ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
+ethers = { git = "https://github.com/roynalnaruto/ethers-rs-1", branch = "feat/tokenlist", default-features = false }
 eyre = "0.6.5"
 color-eyre = "0.5"
 rustc-hex = "2.1.0"
