--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ debug = true
 
 [patch.crates-io]
 ethers = { git = "https://github.com/roynalnaruto/ethers-rs-1", branch = "feat/tokenlist", default-features = false }
+ethers-addressbook = { git = "https://github.com/roynalnaruto/ethers-rs-1", branch = "feat/tokenlist", default-features = false }
 ethers-core = { git = "https://github.com/roynalnaruto/ethers-rs-1", branch = "feat/tokenlist", default-features = false }
 ethers-providers = { git = "https://github.com/roynalnaruto/ethers-rs-1", branch = "feat/tokenlist", default-features = false }
 ethers-signers = { git = "https://github.com/roynalnaruto/ethers-rs-1", branch = "feat/tokenlist", default-features = false }
@@ -24,4 +25,3 @@ ethers-etherscan = { git = "https://github.com/roynalnaruto/ethers-rs-1", branch
 ethers-solc = { git = "https://github.com/roynalnaruto/ethers-rs-1", branch = "feat/tokenlist", default-features = false }
 ethers-contract = { git = "https://github.com/roynalnaruto/ethers-rs-1", branch = "feat/tokenlist", default-features = false }
 ethers-middleware = { git = "https://github.com/roynalnaruto/ethers-rs-1", branch = "feat/tokenlist", default-features = false }
-ethers-tokenlist = { git = "https://github.com/roynalnaruto/ethers-rs-1", branch = "feat/tokenlist", default-features = false }
