--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -8,9 +8,10 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 # ethers = "0.5"
-ethers-addressbook = { git = "https://github.com/roynalnaruto/ethers-rs-1", branch = "feat/tokenlist", default-features = false }
-ethers-core = { git = "https://github.com/roynalnaruto/ethers-rs-1", branch = "feat/tokenlist", default-features = false }
-ethers-etherscan = { git = "https://github.com/roynalnaruto/ethers-rs-1", branch = "feat/tokenlist", default-features = false }
+ethers-core = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
+ethers-etherscan = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
+ethers-addressbook = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
+
 
 eyre = { version = "0.6.5", default-features = false }
 hex = "0.4.3"
