--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,8 @@ debug = true
 
 
 [patch."https://github.com/gakonst/ethers-rs"]
-ethers = { git = "https://github.com/mattsse/ethers-rs", branch = "matt/solc-utils" }
-ethers-core = { git = "https://github.com/mattsse/ethers-rs", branch = "matt/solc-utils" }
-ethers-providers = { git = "https://github.com/mattsse/ethers-rs", branch = "matt/solc-utils" }
-ethers-signers = { git = "https://github.com/mattsse/ethers-rs", branch = "matt/solc-utils" }
-ethers-etherscan = { git = "https://github.com/mattsse/ethers-rs", branch = "matt/solc-utils" }
+ethers = { git = "https://github.com/brockelmore/ethers-rs" }
+ethers-core = { git = "https://github.com/brockelmore/ethers-rs" }
+ethers-providers = { git = "https://github.com/brockelmore/ethers-rs" }
+ethers-signers = { git = "https://github.com/brockelmore/ethers-rs" }
+ethers-etherscan = { git = "https://github.com/brockelmore/ethers-rs" }
