--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -38,7 +38,9 @@ semver = "1.0.4"
 once_cell = "1.8.0"
 
 [dev-dependencies]
-tempdir = "0.3.7"
+tempfile = "3.2.0"
+ethers-solc = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = ["project-util"] }
+walkdir = "2.3.2"
 
 [features]
 default = ["sputnik-evm", "rustls"]
