--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -38,7 +38,7 @@ glob = "0.3.0"
 semver = "1.0.4"
 once_cell = "1.8.0"
 walkdir = "2.3.2"
-solang-parser = "0.1.0"
+solang-parser = { git = "https://github.com/hyperledger-labs/solang" }
 
 [dev-dependencies]
 tempdir = "0.3.7"
