--- a/evm-adapters/Cargo.toml
+++ b/evm-adapters/Cargo.toml
@@ -28,6 +28,7 @@ serde_json = "1.0.72"
 serde = "1.0.130"
 ansi_term = "0.12.1"
 comfy-table = "5.0.0"
+fnv = "1.0.3"
 
 [dev-dependencies]
 ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = ["solc-full", "solc-tests"] }
