--- a/cast/Cargo.toml
+++ b/cast/Cargo.toml
@@ -19,6 +19,9 @@ rustc-hex = "2.1.0"
 serde_json = "1.0.67"
 chrono = "0.2"
 hex = "0.4.3"
+async-stream = "0.3"
+futures-core = "0.3"
+futures-util = "0.3"
 
 [features]
 default = ["ledger", "trezor"]
