--- a/forge-node/Cargo.toml
+++ b/forge-node/Cargo.toml
@@ -12,6 +12,6 @@ serde_json = "1.0.67"
 tokio = { version = "1.10.1", features = ["time"] }
 tower = "0.4.8"
 
-evm-adapters = { path = "../evm-adapters" }
+foundry-evm = { path = "../evm" }
 forge-node-types = { path = "../forge-node-types" }
 foundry-utils = { path = "../utils" }
