--- a/evm/Cargo.toml
+++ b/evm/Cargo.toml
@@ -20,6 +20,7 @@ thiserror = "1.0.29"
 # Logging
 tracing = "0.1.26"
 tracing-subscriber = "0.2.20"
+tracing-error = "0.2.0"
 
 # Threading/futures
 tokio = { version = "1.10.1" }
@@ -30,7 +31,7 @@ once_cell = "1.9.0"
 # EVM
 bytes = "1.1.0"
 hashbrown = "0.12"
-revm = { package = "revm", git = "https://github.com/bluealloy/revm", default-features = false, features = ["std", "k256"] }
+revm = { package = "revm", git = "https://github.com/bluealloy/revm", default-features = false, features = ["std", "k256", "with-serde"] }
 
 # Fuzzer
 proptest = "1.0.0"
