--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -38,7 +38,8 @@ tokio = { version = "1.11.0", features = ["macros"] }
 regex = { version = "1.5.4", default-features = false }
 ansi_term = "0.12.1"
 rpassword = "5.0.1"
-tracing-subscriber = "0.2.20"
+tracing-error = "0.2.0"
+tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "fmt"] }
 tracing = "0.1.26"
 hex = "0.4.3"
 rayon = "1.5.1"
