--- a/evm/Cargo.toml
+++ b/evm/Cargo.toml
@@ -19,7 +19,8 @@ thiserror = "1.0.29"
 
 # Logging
 tracing = "0.1.26"
-tracing-subscriber = "0.2.20"
+tracing-subscriber = "0.3"
+tracing-error = "0.2.0"
 
 # Threading/futures
 tokio = { version = "1.10.1" }
@@ -30,13 +31,14 @@ once_cell = "1.9.0"
 # EVM
 bytes = "1.1.0"
 hashbrown = "0.12"
-revm = { package = "revm", git = "https://github.com/bluealloy/revm", default-features = false, features = ["std", "k256"] }
+revm = { package = "revm", git = "https://github.com/bluealloy/revm", default-features = false, features = ["std", "k256", "with-serde"] }
 
 # Fuzzer
 proptest = "1.0.0"
 
 # Display
 ansi_term = "0.12.1"
+url = "2.2.2"
 
 [dev-dependencies]
 tempfile = "3.3.0"
