--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -61,7 +61,16 @@ jobs:
           toTag: ${{ steps.release_info.outputs.tag_name }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  release_docker:
+    name: Release Docker
+    runs-on: ubuntu-latest
+    needs: prepare
+    steps:
+      - name: Checkout sources
+        uses: actions/checkout@v2
 
+      - name: Run Docker Release
+        uses: ./.github/workflows/docker-publish.yml@main
   release:
     name: ${{ matrix.job.target }} (${{ matrix.job.os }})
     runs-on: ${{ matrix.job.os }}
