--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,13 +6,8 @@ name: docker-publish-all
 # documentation.
 
 on: 
-  push:
-    tags: [ 'v*.*.*' ]
-    branches:
-      - master
-      - main
   workflow_dispatch:
-    tags: [ 'v*.*.*' ]
+  workflow_call:
 
 env:
   REGISTRY: ghcr.io
@@ -34,7 +29,14 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-        
+
+      - name: Compute release name and tag
+        id: release_info
+        run: |
+          if [[ $IS_NIGHTLY ]]; then
+            echo "::set-output name=tag_name::nightly-${GITHUB_SHA}"
+            echo "::set-output name=release_name::Nightly ($(date '+%Y-%m-%d'))"
+
       # Login against a Docker registry except on PR
       # https://github.com/docker/login-action
       - name: Log into registry ${{ env.REGISTRY }}
