--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,6 +64,7 @@ jobs:
   release_docker:
     name: Release Docker
     runs-on: ubuntu-latest
+    needs: prepare
     steps:
       - uses: ./.github/workflows/docker-publish.yml
   release:
