--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,7 +66,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: prepare
     steps:
-      - uses: ./.github/workflows/docker-publish.yml
+      - name: Checkout sources
+        uses: actions/checkout@v2
+
+      - name: Run Docker Release
+        uses: ./.github/workflows/docker-publish.yml
   release:
     name: ${{ matrix.job.target }} (${{ matrix.job.os }})
     runs-on: ${{ matrix.job.os }}
