--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -65,9 +65,14 @@ jobs:
           toolchain: stable
           profile: minimal
           override: true
-      - uses: Swatinem/rust-cache@v1
+      - name: Rust cache
+        uses: Swatinem/rust-cache@v1
         with:
           cache-on-failure: true
+      - name: Forge RPC cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.foundry/cache
 
       - name: cargo test
         run: cargo test --locked --workspace --all-features --test '*'
