--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -73,6 +73,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.foundry/cache
+          key: forge-rpc-cache
 
       - name: cargo test
         run: cargo test --locked --workspace --all-features --test '*'
