--- a/evm/Cargo.toml
+++ b/evm/Cargo.toml
@@ -11,7 +11,7 @@ foundry-utils = { path = "./../utils" }
 serde_json = "1.0.67"
 serde = "1.0.130"
 hex = "0.4.3"
-ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = ["solc-full"] }
+ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = ["solc-full", "ws", "rustls", "ipc"] }
 
 # Error handling
 eyre = "0.6.5"
